--- a/AdRev.Core/AdRev.Core.csproj
+++ b/AdRev.Core/AdRev.Core.csproj
@@ -1,35 +1,18 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
-
   <PropertyGroup>
-    <TargetFramework>net8.0-windows</TargetFramework>
+    <TargetFramework>net9.0</TargetFramework>
     <Nullable>enable</Nullable>
-    <UseWPF>true</UseWPF>
     <ImplicitUsings>enable</ImplicitUsings>
   </PropertyGroup>
-
-  <ItemGroup>
-    <Folder Include="Analysis\" />
-    <Folder Include="DataCollection\" />
-
-    <Folder Include="Submission\" />
-    <Folder Include="Reporting\" />
-    <Folder Include="Protocol\" />
-  </ItemGroup>
 
   <ItemGroup>
     <ProjectReference Include="..\AdRev.Domain\AdRev.Domain.csproj" />
   </ItemGroup>
 
   <ItemGroup>
-<<<<<<< HEAD
-    <PackageReference Include="DocumentFormat.OpenXml" Version="3.4.1" />
+    <PackageReference Include="System.Management" Version="9.0.1" />
+    <PackageReference Include="DocumentFormat.OpenXml" Version="3.0.1" />
     <PackageReference Include="MathNet.Numerics" Version="5.0.0" />
-    <PackageReference Include="System.Management" Version="10.0.2" />
-    <PackageReference Include="UglyToad.PdfPig" Version="1.7.0-custom-5" />
-=======
-    <PackageReference Include="MathNet.Numerics" Version="5.0.0" />
-    <PackageReference Include="System.Management" Version="10.0.2" />
->>>>>>> origin/main
+    <PackageReference Include="UglyToad.PdfPig" Version="0.1.13" />
   </ItemGroup>
-
 </Project>
