Update build scripts and remaining modifications

--- a/AdRev.Desktop/AdRev.Desktop.csproj
+++ b/AdRev.Desktop/AdRev.Desktop.csproj
@@ -2,11 +2,10 @@
 
   <PropertyGroup>
     <OutputType>WinExe</OutputType>
-    <TargetFramework>net8.0-windows</TargetFramework>
+    <TargetFramework>net9.0-windows</TargetFramework>
     <Nullable>enable</Nullable>
     <ImplicitUsings>enable</ImplicitUsings>
     <UseWPF>true</UseWPF>
-<<<<<<< HEAD
     <Version>1.0.0</Version>
     <NoWarn>$(NoWarn);NU1701</NoWarn>
     <ApplicationIcon>Assets\AppIcon.ico</ApplicationIcon>
@@ -19,16 +18,6 @@
     <IncludeNativeLibrariesForSelfExtract>true</IncludeNativeLibrariesForSelfExtract>
     <DebugType>portable</DebugType>
     <DebugSymbols>true</DebugSymbols>
-=======
-    
-    <!-- Optimized Publishing Settings to protect source code -->
-    <PublishSingleFile>true</PublishSingleFile>
-    <PublishReadyToRun>true</PublishReadyToRun>
-    <SelfContained>true</SelfContained>
-    <IncludeNativeLibrariesForSelfExtract>true</IncludeNativeLibrariesForSelfExtract>
-    <DebugType>none</DebugType>
-    <DebugSymbols>false</DebugSymbols>
->>>>>>> origin/main
   </PropertyGroup>
 
   <ItemGroup>
@@ -41,34 +30,24 @@
   </ItemGroup>
 
   <ItemGroup>
-    <PackageReference Include="DocumentFormat.OpenXml" Version="3.4.1" />
-<<<<<<< HEAD
+    <PackageReference Include="DocumentFormat.OpenXml" Version="3.0.1" />
     <PackageReference Include="LiveCharts.Wpf" Version="0.9.7" />
     <PackageReference Include="MaterialDesignThemes" Version="5.3.0" />
     <PackageReference Include="Microsoft.Web.WebView2" Version="1.0.3800.47" />
-=======
->>>>>>> origin/main
     <PackageReference Include="Obfuscar" Version="2.2.50">
       <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
       <PrivateAssets>all</PrivateAssets>
     </PackageReference>
-    <PackageReference Include="System.Management" Version="10.0.2" />
-<<<<<<< HEAD
-    <PackageReference Include="QRCoder" Version="1.4.3" />
+    <PackageReference Include="System.Management" Version="9.0.1" />
+    <PackageReference Include="QRCoder" Version="1.6.0" />
     <PackageReference Include="Newtonsoft.Json" Version="13.0.3" />
-    <PackageReference Include="System.Drawing.Common" Version="8.0.0" />
-    <PackageReference Include="System.Security.Cryptography.ProtectedData" Version="10.0.2" />
-    <PackageReference Include="UglyToad.PdfPig" Version="1.7.0-custom-5" />
+    <PackageReference Include="System.Drawing.Common" Version="9.0.1" />
+    <PackageReference Include="System.Security.Cryptography.ProtectedData" Version="9.0.1" />
+    <PackageReference Include="UglyToad.PdfPig" Version="0.1.7" />
   </ItemGroup>
 
   <Target Name="Obfuscate" AfterTargets="AfterBuild" Condition=" '$(Configuration)' == 'Release' ">
     <Exec Command="&quot;$(Obfuscar)&quot; obfuscar.xml" />
   </Target>
-=======
-  </ItemGroup>
 
-  <!-- <Target Name="Obfuscate" AfterTargets="AfterBuild" Condition=" '$(Configuration)' == 'Release' ">
-    <Exec Command="&quot;$(Obfuscar)&quot; obfuscar.xml" />
-  </Target> -->
->>>>>>> origin/main
 </Project>
