--- a/AdRev.CLI/AdRev.CLI.csproj
+++ b/AdRev.CLI/AdRev.CLI.csproj
@@ -7,22 +7,16 @@
 
   <PropertyGroup>
     <OutputType>Exe</OutputType>
-    <TargetFramework>net8.0-windows</TargetFramework>
+    <TargetFramework>net9.0-windows</TargetFramework>
     <ImplicitUsings>enable</ImplicitUsings>
     <Nullable>enable</Nullable>
-<<<<<<< HEAD
 
     <!-- Options pour un EXE "pro" -->
     <RuntimeIdentifier>win-x64</RuntimeIdentifier>
     <SelfContained>true</SelfContained>
     <PublishSingleFile>true</PublishSingleFile>
-    <PublishTrimmed>true</PublishTrimmed>
-    <PublishTrimmedWarnOnly>true</PublishTrimmedWarnOnly>
+    <PublishTrimmed>false</PublishTrimmed>
     <PublishReadyToRun>true</PublishReadyToRun>
-    <!-- Facultatif : compaction / compression du single-file -->
-    <IncludeAllContentForSelfExtract>true</IncludeAllContentForSelfExtract>
-=======
->>>>>>> origin/main
   </PropertyGroup>
 
 </Project>
