--- a/AdRev.Mobile/AdRev.Mobile.csproj
+++ b/AdRev.Mobile/AdRev.Mobile.csproj
@@ -1,7 +1,6 @@
 <Project Sdk="Microsoft.NET.Sdk">
-
 	<PropertyGroup>
-		<TargetFramework>net8.0-android</TargetFramework>
+		<TargetFrameworks>net9.0-android</TargetFrameworks>
 		<OutputType>Exe</OutputType>
 		<RootNamespace>AdRev.Mobile</RootNamespace>
 		<UseMaui>true</UseMaui>
@@ -19,13 +18,16 @@
 		<ApplicationDisplayVersion>1.5</ApplicationDisplayVersion>
 		<ApplicationVersion>3</ApplicationVersion>
 
-		<!-- Définir le min SDK Android (API level entier) -->
-		<AndroidMinSdkVersion>23</AndroidMinSdkVersion>
+		<!-- Définir le min SDK Android -->
 		<SupportedOSPlatformVersion>23.0</SupportedOSPlatformVersion>
-		<!-- Utiliser la dernière plateforme Android installée pour le target (évite d'indiquer un TargetPlatformVersion invalide) -->
-		<AndroidUseLatestPlatformSdk>true</AndroidUseLatestPlatformSdk>
-
+        
+        <!-- Fix for multiple dex definitions sometimes -->
+        <AndroidEnableMultiDex>true</AndroidEnableMultiDex>
+        
+        <!-- Avoid warnings about implicit package references -->
+        <SkipValidateMauiImplicitPackageReferences>true</SkipValidateMauiImplicitPackageReferences>
 	</PropertyGroup>
+
 	<ItemGroup>
 		<!-- MAUI Resources -->
 		<MauiIcon Include="Resources\AppIcon\appicon.svg" ForegroundFile="Resources\AppIcon\appiconfg.svg" Color="#512BD4" />
@@ -42,12 +44,27 @@
 
 	<ItemGroup>
 		<PackageReference Include="BarcodeScanner.Mobile.Maui" Version="9.0.1" />
-		<PackageReference Include="Microsoft.Maui.Controls" Version="8.0.*" />
-		<PackageReference Include="Microsoft.Maui.Controls.Compatibility" Version="8.0.*" />
-		<PackageReference Include="Microsoft.Extensions.Logging.Debug" Version="8.0.*" />
+		<PackageReference Include="Plugin.InAppBilling" Version="7.1.0" />
+		
+		<PackageReference Include="Microsoft.Extensions.Logging.Debug" Version="9.0.0" />
 		<PackageReference Include="sqlite-net-pcl" Version="1.9.172" />
-		<PackageReference Include="SQLitePCLRaw.bundle_green" Version="2.1.8" />
+		<PackageReference Include="SQLitePCLRaw.bundle_green" Version="2.1.10" />
 		<PackageReference Include="Newtonsoft.Json" Version="13.0.3" />
+        
+        <!-- Explicitly adding these to unify the AndroidX versions and resolve conflicts -->
+        <PackageReference Include="Xamarin.AndroidX.Lifecycle.Runtime" Version="2.9.2.1" />
+        <PackageReference Include="Xamarin.AndroidX.Lifecycle.Runtime.Ktx" Version="2.9.2.1" />
+        <PackageReference Include="Xamarin.AndroidX.Lifecycle.Common" Version="2.9.2.1" />
+        <PackageReference Include="Xamarin.AndroidX.Lifecycle.ViewModel" Version="2.9.2.1" />
+        <PackageReference Include="Xamarin.AndroidX.Lifecycle.ViewModel.Ktx" Version="2.9.2.1" />
+        
+        <PackageReference Include="Xamarin.AndroidX.SavedState" Version="1.3.1.1" />
+        <!-- Note: SavedState.Ktx might be pulling in the same classes as SavedState 1.3.1.1 -->
+        <!-- We try to force it to a compatible version or omit it if possible, but let's try matching version first -->
+        <PackageReference Include="Xamarin.AndroidX.SavedState.SavedState.Ktx" Version="1.3.1.1" />
+        
+        <PackageReference Include="Xamarin.AndroidX.Fragment" Version="1.8.8.1" />
+        <PackageReference Include="Xamarin.AndroidX.Fragment.Ktx" Version="1.8.8.1" />
 	</ItemGroup>
 
 </Project>
