chore: exclude AdRev.Setup and AdRev.Mobile from repository

--- a/.gitignore
+++ b/.gitignore
@@ -41,3 +41,7 @@ dist/
 
 # Exclure le génrateur de licences (Outil interne confidentiel)
 AdRev.LicenseGenerator/
+
+# Exclure les projets de déploiement et mobiles
+AdRev.Setup/
+AdRev.Mobile/
